Resolved build errors